--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-
+spring.data.mongodb.uri=mongodb+srv://getmesocial-service:getmesocial@cluster0.xpchi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
